# Swasthya

./: README.md
backend/: .env  README.md  cron_runner.py  migrate_schema.sql  pyproject.toml  requirements.txt  seed_data.sql  test_providers.py
backend/app/: __init__.py  config.py
backend/app/cron/: __init__.py  base.py  general_health_tips.py  health_alerts.py  medicine_reminders.py  scheduler.py  user_health_insights.py  weather_alerts.py
backend/app/data_scripts/: __init__.py  climate_data.py  disease_data.py  disease_encyclopedia.py  disease_storage.py  earthquake_data.py  medicine_data.py  weather_data.py
backend/app/models/: __init__.py  ai_conversation.py  appointment.py  disease_surveillance.py  doctor.py  health_alert.py  hospital.py  medical_history.py  medicine.py  prevention.py  reminder.py  simulation.py  user.py
backend/app/routes/: __init__.py  ai_history.py  ai_sathi.py  appointments.py  auth.py  blood_banks.py  calculators.py  cron_routes.py  disease_surveillance.py  diseases.py  doctors.py  drug_info.py  emergency.py  health_alerts.py  health_data.py  hospitals.py  live_ai_call.py  medical_history.py  medicines.py  notifications.py  prevention.py  reminders.py  simulations.py  users.py
backend/app/utils/: __init__.py  ai_image_service.py  ai_tools.py  tts_service.py
backend/migrations/: add_google_oauth.sql  add_user_role.sql  ai_conversation_tables.sql
backend/scripts/: fetch_health_data.py
design/ai_cpr_simulation/: code.html  test.py
design/ai_sathi_chat_interface_1/: code.html
mobile/: README.md  pubspec.yaml
(+108 files in other folders)
